Version X - 10th Anniversary edition. 16 May 2023

This is a special edition. Version is called "X" (actually is 10.10)

Added Docker support
Added new compiled versions: Ubuntu and Fedora
Added screen previews of directories and compressed files on File Selector
Added flash support on screen previews on File Selector
Added ZX Desktop icons for TSConf, Baseconf
Added PCW colour modes
Added another toy ZXLife to a new menu Procrastinate
Added compilation os release info, running os info
Added rom file selection for any machine you select, rom file is saved on configuration
Added Ascii Table window
Added Creator Info to ZSF snapshots
Added Joysticks support for PCW: Kempston, Cascade, DKTronics, OPQASpace

Improved Accessibility: Added Sounds for GUI events

Improved AY Player:
- Added playlist
- Added shuffle mode
- Added silence detection
- Added show current AY Player song playing on console

Improved Text Adventure features:
- Added location description texto to image, using AI <-- TODO fix this description
- Added configuration setting for char filter
- Added configuration settings for Text Adventure Map: follow, show unvisited, show unconnected, show objects, show pictures, zoom level
- Added export draw strings to external file (txt, asm, c or pas)
- Preserve zoom level on Text Adventure Map when loading games
- Added GAC support for Text Adventure Map
- Added GAC support for Debug Adventure (cpu view 8) supporting:
  - Connections table
  - Dictionary
  - Objects
  - Verbs
  - Adverbs
  - Locations
  - Messages

Improved ZX Vision
- Allow to render only changed pixels (so it speeds up render). Internal flag: dirty_user_must_draw_contents
- Added more utf-8 characters (ï)
- Added action to put windows in cascade
- Process switcher can be set to immutable, so massive actions on menu Windows, like minimize all, cascade, etc, don't affect it
- Allow to use your own charset file on ZX Vision